// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breakpoint disabled 1`] = `
<div
  className="breakpoint disabled"
  onClick={[Function]}
  onContextMenu={[Function]}
  onDoubleClick={[Function]}
>
  <input
    aria-labelledby="undefined-label"
    checked={false}
    className="breakpoint-checkbox"
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="breakpoint-label cm-s-mozilla devtools-monospace"
    id="undefined-label"
    onClick={[Function]}
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
    />
  </span>
  <div
    className="breakpoint-line-close"
  >
    <div
      className="breakpoint-line devtools-monospace"
    >
      53
    </div>
    <CloseButton
      handleClick={[Function]}
      tooltip="Remove breakpoint"
    />
  </div>
</div>
`;

exports[`Breakpoint paused at a different 1`] = `
<div
  className="breakpoint"
  onClick={[Function]}
  onContextMenu={[Function]}
  onDoubleClick={[Function]}
>
  <input
    aria-labelledby="undefined-label"
    checked={true}
    className="breakpoint-checkbox"
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="breakpoint-label cm-s-mozilla devtools-monospace"
    id="undefined-label"
    onClick={[Function]}
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
    />
  </span>
  <div
    className="breakpoint-line-close"
  >
    <div
      className="breakpoint-line devtools-monospace"
    >
      53
    </div>
    <CloseButton
      handleClick={[Function]}
      tooltip="Remove breakpoint"
    />
  </div>
</div>
`;

exports[`Breakpoint paused at a generatedLocation 1`] = `
<div
  className="breakpoint paused"
  onClick={[Function]}
  onContextMenu={[Function]}
  onDoubleClick={[Function]}
>
  <input
    aria-labelledby="undefined-label"
    checked={true}
    className="breakpoint-checkbox"
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="breakpoint-label cm-s-mozilla devtools-monospace"
    id="undefined-label"
    onClick={[Function]}
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
    />
  </span>
  <div
    className="breakpoint-line-close"
  >
    <div
      className="breakpoint-line devtools-monospace"
    >
      53
    </div>
    <CloseButton
      handleClick={[Function]}
      tooltip="Remove breakpoint"
    />
  </div>
</div>
`;

exports[`Breakpoint paused at an original location 1`] = `
<div
  className="breakpoint paused"
  onClick={[Function]}
  onContextMenu={[Function]}
  onDoubleClick={[Function]}
>
  <input
    aria-labelledby="undefined-label"
    checked={true}
    className="breakpoint-checkbox"
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="breakpoint-label cm-s-mozilla devtools-monospace"
    id="undefined-label"
    onClick={[Function]}
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
    />
  </span>
  <div
    className="breakpoint-line-close"
  >
    <div
      className="breakpoint-line devtools-monospace"
    >
      5
    </div>
    <CloseButton
      handleClick={[Function]}
      tooltip="Remove breakpoint"
    />
  </div>
</div>
`;

exports[`Breakpoint simple 1`] = `
<div
  className="breakpoint"
  onClick={[Function]}
  onContextMenu={[Function]}
  onDoubleClick={[Function]}
>
  <input
    aria-labelledby="undefined-label"
    checked={true}
    className="breakpoint-checkbox"
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    className="breakpoint-label cm-s-mozilla devtools-monospace"
    id="undefined-label"
    onClick={[Function]}
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
    />
  </span>
  <div
    className="breakpoint-line-close"
  >
    <div
      className="breakpoint-line devtools-monospace"
    >
      53
    </div>
    <CloseButton
      handleClick={[Function]}
      tooltip="Remove breakpoint"
    />
  </div>
</div>
`;
